@@ -10,17 +10,19 @@ AUX bison-2.5-interix.patch 792 RMD160 4cf5085de12fa8956a92b3f505798a695583881e 
 DIST bison-1.875d.tar.bz2 882745 RMD160 37ab2ea1df81021c481625794938dcdacc09e4d2 SHA1 cf17c4f2df1344ee93bcc5c336f691db831d1ab5 SHA256 37ff8d673e35838c195d614bc402573d1268c997796e79b831053f4a22e03808
 DIST bison-2.4.2.tar.bz2 1616117 RMD160 bc72359a93ad36ae60e8027d846211cb99634d93 SHA1 4e2c4b40a248748989b3fe7f0d89022ea11a8d6f SHA256 57fb243aa9af04a6a57c4f4d9167f4440059fe923817f1fdf5592ab892af4fb8
 DIST bison-2.4.3.tar.bz2 1652612 RMD160 7ff76f7c75a9989ab9227cd291c6f75af8a6558d SHA1 2345d568c1ab7fdfbf4e3ae9e08fc8a82790ba3a SHA256 935302ef194c7f0974fed913eaac8100be512094eab573cf0b67bdf7db1d3a05
+DIST bison-2.5.1.tar.xz 1608376 RMD160 45c2c6fa232bf9697e73653722d51759f284bbd4 SHA1 4cd881033f4a66cf691462b0f2d8293aa712a781 SHA256 fec90caed650270484955ba6ee73ddb01186608799a27fcaaf868e5274c030d8
 DIST bison-2.5.tar.bz2 2030863 RMD160 9f90e477c9c397a8b136aa7bcee887767d94eea7 SHA1 907319624fe4f4c5f9e2c3e23601041ac636ae31 SHA256 0a370df6ee2b23e9ec3043e1ab78878241aa008ec424926294dd4cb3475439b8
 EBUILD bison-1.875d.ebuild 1797 RMD160 d197b0ddc1f429a82d6c5961726f080510287b99 SHA1 6535a69a3bc306b31702d07eb01e2131b84f467f SHA256 2839114a5800fd88078ff4134643626f7cbb258b1654c1677cf0eae549b725ae
 EBUILD bison-2.4.2.ebuild 1486 RMD160 a51aa916231431305f1e145b613aa05c7d8f84a2 SHA1 e20c53261328d7b89f0b1941f215400f7e1a937e SHA256 dcd3e135f26e224f56fd33394b0521b22d383dbdd34917fa2165accc58e75531
 EBUILD bison-2.4.3.ebuild 1322 RMD160 39d80c8c8cc474fb94950f4cc534845510775b7f SHA1 8884306e9dd039e9f055d004dedf73dda71580a5 SHA256 640ed7b7748d964e8759dbe4e8e1b9f320b250220c9372489bb3f2fa2883039f
+EBUILD bison-2.5.1.ebuild 1643 RMD160 fc846453dc7be22afa0f6959b79dc0c4fe6e82ab SHA1 dcb015e0106fb6c299ef567bdf9910cb1d663c47 SHA256 d2b3da907b48f99810fa0a0bbf74d458442b6fc47d2f6f16f6b930697469a3e5
 EBUILD bison-2.5.ebuild 1519 RMD160 06ef34508f15c22fb8ced6f284b1ff1e142012da SHA1 32be830ac8217b37827377a8bc4d5477e8d2eb25 SHA256 4ec09a7a3097caf9fbfaecb85773506e43c462bccc0c050873cd1ba0b3e148c3
-MISC ChangeLog 14712 RMD160 6cb8b968625533257303a7b60b4cd68a3ae47011 SHA1 c29ed66e804843daf2787fe8bc2a1fc7c5d13e3d SHA256 b9eb8aee02910cec59a18fa9619b5a48b77ac3a1db7dd5d2f5c16be1f76b93ce
+MISC ChangeLog 14835 RMD160 a5f99f6077605c60b03397fbd1c06085832741f4 SHA1 728c6bcda13639043a3cf7035bf7c9fed77a88f2 SHA256 a3de897c53264c36bf524bdc61bacbec29544c42235a08556b3fa714f2bc44c0
 MISC metadata.xml 164 RMD160 f43cbec30b7074319087c9acffdb9354b17b0db3 SHA1 9c213f5803676c56439df3716be07d6692588856 SHA256 f5f2891f2a4791cd31350bb2bb572131ad7235cd0eeb124c9912c187ac10ce92
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2.0.19 (SunOS)
 
-iEYEARECAAYFAk/CF4AACgkQX3X2B8XHTolI7QCfYyODmbX4Z3XLIaqtMsBgWdUJ
-L/oAoIBjOA2fb74T83tDK0EJYU9rcskY
-=1NkT
+iEYEARECAAYFAk/Xo64ACgkQX3X2B8XHTokKfwCgl9mNa1RuVoAHI+QZ4bVB+Z7o
+8oMAnjQuF4MEAS04eoZpP1kohDdpagcm
+=JZa+
 -----END PGP SIGNATURE-----
