@@ -1,6 +1,11 @@
 # ChangeLog for sys-devel/bison
 # Copyright 1999-2012 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-devel/bison/ChangeLog,v 1.110 2012/05/24 02:40:38 vapier Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-devel/bison/ChangeLog,v 1.111 2012/06/06 14:34:23 ssuominen Exp $
+
+*bison-2.5.1 (06 Jun 2012)
+
+  06 Jun 2012; Samuli Suominen <ssuominen@gentoo.org> +bison-2.5.1.ebuild:
+  Version bump.
 
   24 May 2012; Mike Frysinger <vapier@gentoo.org> bison-2.4.2.ebuild,
   bison-2.5.ebuild:
